--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,21 @@
 FROM golang:1.11-alpine3.8 as builder
 
-RUN apk add --update git curl libarchive-dev build-base linux-headers nodejs nodejs-npm
+RUN apk add --update git curl libarchive-dev build-base linux-headers
 
 RUN mkdir -p $$GOPATH/bin && \
     curl https://glide.sh/get | sh
 
-ADD . /go/src/github.com/UpdateHub/updatehub-ce-server
-WORKDIR /go/src/github.com/UpdateHub/updatehub-ce-server
+ADD . /go/src/github.com/gustavosbarreto/uhmicro/server
+WORKDIR /go/src/github.com/gustavosbarreto/uhmicro/server
 
-RUN glide i && \
-    go get -u github.com/gobuffalo/packr/... && \
-    (cd ui; npm install && npm run build) && \
-    packr install
+RUN glide i && go build
 
 FROM alpine:3.8
 
 RUN apk add --update libarchive
 
-COPY --from=builder /go/bin/updatehub-ce-server /usr/bin/updatehub-ce-server
+COPY --from=builder \
+     /go/src/github.com/gustavosbarreto/uhmicro/server/server \
+     /usr/bin/updatehub-server
 
-ENTRYPOINT ["/usr/bin/updatehub-ce-server"]
+ENTRYPOINT ["/usr/bin/updatehub-server"]
