Update upstream host

--- a/gateway/updatehub.conf
+++ b/gateway/updatehub.conf
@@ -9,7 +9,7 @@ server {
     
     location ~ ^/ui/.* {
         rewrite ^/ui/(.*)$ /$1 break;
-        proxy_pass http://ui:8080;
+        proxy_pass http://updatehub-ui:8080;
     }
 
     location = / {
@@ -17,6 +17,6 @@ server {
     }
 
     location ~ ^/.* {
-        proxy_pass http://server:8080;
+        proxy_pass http://updatehub-server:8080;
     }
 }
